# clarion

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  REWRITE_PLAN.md  go.mod  go.sum  main.go
clarion-frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
clarion-frontend/src/: App.tsx  index.css
clarion-frontend/src-tauri/: 2  Cargo.toml  tauri.conf.json
clarion-frontend/src-tauri/capabilities/: default.json
clarion-frontend/src-tauri/src/: lib.rs
db/migrations/: 001_create_agents_table.sql  002_create_llm_configs_table.sql  003_create_projects_table.sql  004_create_runs_table.sql
internal/agent/: agent.go
internal/api/: agent_handlers.go  api_models.go  fs_models.go  fs_ws_handler.go  git_models.go  llm_config_handlers.go  project_handlers.go  run_handlers.go  server.go  terminal_models.go  terminal_ws_handler.go  tokenizer_handler.go
internal/canvas/: canvas_models.go
internal/codebase/: codebase.go  codebase_test.go  models.go  tree.go
internal/config/: config.go
internal/database/: database.go  seed.go  sqlite.go
internal/fs/: file_system_manager.go
internal/hydrator/: hydratos.go
internal/llm/: anthropic.go  gemini.go  openai.go  openrouter.go  prompt.go  provider.go  registry.go
internal/message/: roles.go
internal/models/: block.go  schemas.go
internal/shell/: executor.go
internal/storage/: agent_store.go  filestore.go  llm_config_store.go  project_store.go  run_store.go  sqlite_agent_store.go  sqlite_llm_config_store.go  sqlite_project_store.go  (+1 more)
(+71 files in other folders)
